--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "#### (Exercise 1) \n",
     "\n",
-    "Read the file `.lesson/assets/NEW-DATA-1.T15.txt` and put it in a dataframe. I want you to generate a forecast for a few of the last observations of the column \"10:Lighting_Comedor_Sensor\" and then compare against the actual values. Some tips:\n",
+    "Read the file `.lesson/assets/NEW-DATA-1.T15.txt` and put it in a dataframe. I want you to generate a forecast for a few of the last observations of the column `10:Lighting_Comedor_Sensor` and then compare against the actual values. Some tips:\n",
     "\n",
     "* rename the columns to simpler names\n",
     "* use `pd.to_datetime` to combine the date and time columns\n",
@@ -31,6 +31,7 @@
     "What do you think of the prediction in the short run? And in the long run? How could it be improved?\n",
     "\n",
     "#### (Exercise 2) \n",
+    "\n",
     "Do the same thing for the file `.lesson/assets/fred_unemployment.csv`."
    ]
   },
